# Avram

./: AUTHORS  CMakeLists.txt  ChangeLog  FAQ  HISTORY  Makefile.am  Makefile.in  README  README.md  aclocal.m4  avram.lsm.in  avram.spec.in  config.h.in  configure  configure.in  index.html  params.json
avm/: Makefile.am  Makefile.in  apply.h  bes.h  branches.h  chrcodes.h  cmdline.h  common.h  compare.h  complexlib.h  decons.h  error.h  exmodes.h  farms.h  fftw.h  fnames.h  formin.h  formout.h  glpklib.h  gsldiflib.h  gslevu.h  gslintlib.h  harminv.h  instruct.h  jobs.h  kinsol.h  lapack.h  libfuns.h  listfuns.h  lists.h  lpsolve.h  matcon.h  mathlib.h  minpack.h  mpfr.h  mtwist.h  mwrap.h  portals.h  ports.h  profile.h  (+7 more)
doc/: Makefile.am  Makefile.in  avram.1  avram.info  avram.info-1  avram.info-2  avram.ps  avram.texinfo
doc/avram.html/: A-Hierarchy-of-Sets.html  A-Minimal-Set-of-Properties.html  A-New-Operator.html  A-Simple-Lisp-Like-Language.html  Additional-glpk-notes.html  Additional-gsldif-notes.html  Additional-gslint-notes.html  Additional-harminv-notes.html  Additional-kinsol-notes.html  Additional-lapack-notes.html  Additional-math-library-notes.html  Additional-minpack-notes.html  Additional-mpfr-notes.html  Additional-mtwist-notes.html  Additional-umf-notes.html  Application-Programming-Errors.html  Assignment.html  Bessel-function-calling-conventions.html  Bessel-function-errors.html  Bit-String-Encoding.html  Blocking.html  Bugs.html  Byte-Transducers.html  Calling-existing-library-functions.html  Cat.html  Changes.html  Character-Oriented-Interaction.html  Character-Table.html  Characters-and-Strings.html  Command-Line-Parsing.html  Command-Line-Syntax.html  Compare.html  Comparison.html  Computable-Error-Messages.html  Concept-Index.html  Concrete-Syntax.html  Configuration-Related-Errors.html  Copying.html  Data-Section.html  Deconstruction-Functions.html  (+193 more)
src/: CMakeLists.txt  Makefile.am  Makefile.in  apply.c  avram.c  bes.c  branches.c  chrcodes.c  cmdline.c  com.fun  compare.c  complexlib.c  decons.c  error.c  exf.c  exfsrc.fun  exmodes.c  farms.c  fftw.c  fnames.c  formin.c  formout.c  glpklib.c  gsldiflib.c  gslevu.c  gslintlib.c  harminv.c  instruct.c  jobs.c  kinsol.c  lapack.c  libfuns.c  listfuns.c  lists.c  lpsolve.c  matcon.c  mathlib.c  memmove.c  minpack.c  mpfr.c  (+14 more)
