MAINTAINERCLEANFILES	= Makefile.in

pkgincludedir		= $(includedir)/avm

INCLUDES		= -I$(top_builddir) -I$(top_srcdir)

pkginclude_HEADERS=error.h lists.h branches.h chrcodes.h rawio.h \
formin.h formout.h fnames.h cmdline.h compare.h decons.h ports.h portals.h \
profile.h instruct.h listfuns.h matcon.h apply.h exmodes.h common.h vman.h \
libfuns.h mathlib.h complexlib.h rmathlib.h mtwist.h gslintlib.h \
gsldiflib.h gslevu.h glpklib.h umf.h mpfr.h lapack.h fftw.h minpack.h \
kinsol.h mwrap.h bes.h lpsolve.h harminv.h remote.h servlist.h jobs.h \
farms.h vglue.h

